adds new button

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 			<div>
 				<input type="button" class="btn btn-primary" value="submit">
 				<input type="button" class="btn btn-info" value="reset">
-				<input type="button" class="btn btn-warning" value="Edit">
+				<input type="button" class="btn btn-warning
+				" value="Edit">
 				<input type="button" class="btn btn-danger" value="Delete">
+				<input type="button" class="btn btn-default" value="Default">				
 			</div>		
 		</div>	
 	
