--- a/index.html
+++ b/index.html
@@ -9,43 +9,27 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">	
 </head>
 <body>
+	<header> 
+		<nav class="navbar navbar-default"> 
+			<div class="container"> 
+				<div class="navbar-header"> 
+					<a class="navbar-brand" href="#">AngularJS Routing App</a> 
+				</div>	 
+				<div class="nav navbar-nav navbar-right"> 
+						<li><a href="#/"><i class="fa fa-home"></i>Home</a></li> 
+						<li><a href="#/register"><i class="fa fa-home"></i>Register</a></li> 
+						<li><a href="#/login"><i class="fa fa-home"></i>Login</a></li> 
+				</div>			 
+			</div> 
+			</nav> 
+	</header> 
 	<div class="container">
-		<h1>Angular Homepage</h1>
-		<div ng-controller="myController">
-			<h3>{{message}}</h3>
-			<div>
-				<table class="table">
-					<thead>
-						<tr>
-							<th>Name</th>
-							<th>Age</th>
-							<th>City</th>
-							<th>Mobile</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="employee in employeeList">
-							<td>{{employee.name}}</td>
-							<td>{{employee.age}}</td>
-							<td>{{employee.city}}</td>
-							<td>{{employee.mobile}}</td>
-						</tr>
-					</tbody>	
-				</table>			
-			</div>	
-			<div>
-				<input type="button" class="btn btn-primary" value="submit">
-				<input type="button" class="btn btn-info" value="reset">
-				<input type="button" class="btn btn-warning
-				" value="Edit">
-				<input type="button" class="btn btn-danger" value="Delete">
-				<input type="button" class="btn btn-default" value="Default">				
-			</div>		
-		</div>	
-	
+		<ng-view></ng-view>
 	</div>
 
 	<script type="text/javascript" src="https://code.angularjs.org/1.6.4/angular.js"></script>
+	<script type="text/javascript" src="https://code.angularjs.org/1.6.4/angular-route.js"></script>
 	<script type="text/javascript" src="app.js"></script>
+
 </body>
 </html>
